@@ -45,14 +45,14 @@ if($modmonitor){
     
     $properties = array();
     
-    if($scriptProperties){
+    /*if($scriptProperties){
         foreach($scriptProperties as $property){
             if(is_object($property)){
                 continue;
             }
             $properties[] = $property;
         }
-    }
+    }*/
     
 
     $modMonitorItem = $this->xpdo->newObject("modMonitorRequestItem", array(
