@@ -1,3 +1,8 @@
+modMonitor-2.6.1-beta
+================================
+- Remove $scriptProperties from plugins statistic
+
+
 modMonitor-2.6.0-beta
 ================================
 - Added setting modmonitor.collect_plugins_info
